Fix captcha validation issue

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
     </canvas>
 
     <input  
-    type="text"  id="captchaInput" class="form-control"   placeholder="Enter captcha" required style="max-width: 200px;" />
+    type="text"  id="captchaInput" class="form-control"   placeholder="Enter captcha"  style="max-width: 200px;" />
       <button 
       type="button"   id="refreshCaptcha"   class="btn btn-outline-dark btn-lg">
         Refresh
